# playwright-dompath-py

./: .prettierignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  pytest.ini  setup.py
playwright_dompath/: css.escape.js  dom_path_async.py  dom_path_sync.py
src/playwright_dompath/: __init__.py  dompath_sync.py
tests/: conftest.py  test_locator_css.py  test_locator_xpath.py
